<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HelpSeekerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="23dp"
                android:textCursorDrawable="@drawable/cursor"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/hp"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="23dp"
                android:textCursorDrawable="@drawable/cursor"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/edit_text_border"
                android:gravity="start|top"
                android:hint="@string/home"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:paddingStart="23dp"
                android:paddingTop="23dp"
                android:textCursorDrawable="@drawable/cursor"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/edit_text_border"
                android:gravity="start|top"
                android:hint="@string/desp"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingStart="23dp"
                android:paddingTop="23dp"
                android:textCursorDrawable="@drawable/cursor"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="13dp"
                android:backgroundTint="@color/black"
                android:onClick="post_request"
                android:text="@string/post"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>