<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/black"
    tools:context=".activities.DecisionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="23dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/ripple_effect"
            android:onClick="onClicked"
            android:text="@string/give"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/help_seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="33dp"
            android:background="@drawable/ripple_effect"
            android:onClick="onClicked"
            android:text="@string/get"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <TextView
        android:id="@+id/footNote1"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_alignParentBottom="true"
        android:text="@string/footnote"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />


</RelativeLayout>